# tokio_actors

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  postgres.Dockerfile
.cargo/: config
.github/workflows/: rust.yml
assets/: styles.css
migrations/: 20230907201912_init.down.sql  20230907201912_init.up.sql
src/: config.rs  error.rs  main.rs  users.rs  web.rs
src/actors/: actor.rs
src/controllers/: auth_controller.rs  hub_controller.rs  metrics_controller.rs  mod.rs  offer_controller.rs  ticker_controller.rs
src/libs/: credit_file_enums.rs  date_convert.rs  hamming.rs  loan_enums.rs  mod.rs  parse_image_links.rs  pg_notify_handle.rs
src/models/: application.rs  auth.rs  chat.rs  credit_file.rs  error.rs  loan.rs  mod.rs  offer.rs  payment.rs  servicer.rs  store.rs
src/redis_mod/: mod.rs  redis_mod.rs  redis_publisher.rs  redis_subscriber.rs
src/web/: api.rs  app.rs  auth.rs  protected.rs  public.rs  utils.rs  ws.rs
templates/: about.html  application.html  apply_offers.html  base.html  chat_component.html  chat_index.html  chat_message.html  contact.html  dump.html  famous_similars.html  index.html  login.html  lrtc_template.html  nav.html  offers.html  post.html  protected.html  register.html  ticker.html  users.html  writing_sample.html  writing_sample_thank_you.html
templates/form/: address.html  form-validation.html  form_error.html  history.html  loan_info.html  sample_entry.html  upload.html
templates/offer/: offer_score.html
