[package]
name = "tokio_actors"
version = "0.1.0"
edition = "2021"

## ConfigMap
SERVICE_WEB_FOLDER="web/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "markdown", "serde-json"] }
askama_axum = "0.4.0"
async-stream = "0.3.5"
async-trait = "0.1.77"
axum = { version = "0.7.3", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-login = "0.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-redis = { version = "0.14.0", features = ["serde", "rt_async-std_1"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
hyper = { version = "1.1.0", features = ["full"] }
lazy_static = "1.4.0"
password-auth = "1.0.0"
rand = "0.8.5"
redis = { version = "0.24.0", features = ["r2d2"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
sendgrid = "0.20.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["postgres", "macros", "time", "chrono", "runtime-tokio-rustls"] }
struct_iterable = "0.1.1"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full", "time"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tower-http = { version = "0.5.0", features = ["cors", "trace", "fs"] }
tower-sessions = { version = "0.9.1", features = ["postgres-store"] }
tower_governor = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }
